--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;700&display=swap');
 
+.body{
+  background-image: url(~assets/images/bg-texture-01.jpg);
+}
+
 .gpg-bg-primary{
   background-color: #90eb00;
 }
