--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;700&display=swap');
 
-.body{
-  background-image: url(~assets/images/bg-texture-01.jpg);
+body{
+  background-color: #111827;
 }
 
 .gpg-bg-primary{
