--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,3 +11,21 @@ body{
 .gpg-font-bold{
   font-family: 'Rajdhani', sans-serif;
 }
+
+
+.jarallax {
+  position: relative;
+  z-index: 0;
+}
+
+.jarallax > .jarallax-img {
+  position: absolute;
+  object-fit: cover;
+  /* support for plugin https://github.com/bfred-it/object-fit-images */
+  font-family: 'object-fit: cover;';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
